--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,11 @@
+2012-08-20  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Inline getter and setter functions for per-buffer values.
+	* buffer.h (per_buffer_default, set_per_buffer_default)
+	(per_buffer_value, set_per_buffer_value): New functions.
+	(PER_BUFFER_VALUE, PER_BUFFER_DEFAULT): Remove.
+	* buffer.c, data.c: Adjust users.
+
 2012-08-20  Juanma Barranquero  <lekktu@gmail.com>
 
 	* makefile.w32-in ($(BLD)/vm-limit.$(O)): Update dependencies.
