--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,14 @@
 2012-08-20  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	Inline setter functions for hash table members.
+	* lisp.h (set_hash_key, set_hash_value, set_hash_next)
+	(set_hash_hash, set_hash_index): Rename with _slot suffix.
+	(set_hash_key_and_value, set_hash_index, set_hash_next)
+	(set_hash_hash): New functions.
+	* charset.c, fns.c: Adjust users.
+
+2012-08-20  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	Inline getter and setter functions for per-buffer values.
 	* buffer.h (per_buffer_default, set_per_buffer_default)
 	(per_buffer_value, set_per_buffer_value): New functions.
