--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,12 @@
 2012-08-20  Dmitry Antipov  <dmantipov@yandex.ru>
 
+	Use AREF and ASET for docstrings of category tables.
+	* category.h (CATEGORY_DOCSTRING): Use AREF.
+	(SET_CATEGORY_DOCSTRING): Use ASET.
+	* category.c (Fdefine_category): Use SET_CATEGORY_DOCSTRING.
+
+2012-08-20  Dmitry Antipov  <dmantipov@yandex.ru>
+
 	Inline setter functions for hash table members.
 	* lisp.h (set_hash_key, set_hash_value, set_hash_next)
 	(set_hash_hash, set_hash_index): Rename with _slot suffix.
