--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-20  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.c (select_window): Always make selected window's buffer
+	current.
+
 2012-08-20  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Use AREF and ASET for docstrings of category tables.
