--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-20  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Inline setter functions for Lisp_Objects slots of struct specbinding.
+	* eval.c (set_specpdl_symbol, set_specpdl_old_value): New functions.
+	Adjust users.
+
 2012-08-20  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.c (select_window): Always make selected window's buffer
