--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-20  Chong Yidong  <cyd@gnu.org>
+
+	* descr-text.el (describe-text-properties-1): Use overlays-in to
+	report on empty overlays (Bug#3322).
+
 2012-08-20  Glenn Morris  <rgm@gnu.org>
 
 	* mail/rmailout.el (rmail-output-read-file-name):
