--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-20  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (tramp-accept-process-output): Accept only output
+	from PROC.  Otherwise, process filters and sentinels might be
+	confused.  (Bug#12145)
+
 2012-08-20  Chong Yidong  <cyd@gnu.org>
 
 	* descr-text.el (describe-text-properties-1): Use overlays-in to
