--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-20  Dan Nicolaescu  <dann@gnu.org>
+
+	* progmodes/hideshow.el (hs-block-end-regexp): Restore lost
+	buffer local setting.
+
 2012-08-15  Chong Yidong  <cyd@gnu.org>
 
 	* Version 24.2 released.
