Avoid GDB 7.5 warnings about "set main" in src/.gdbinit.
 src/.gdbinit: Use "set $dummy = ..." to avoid warnings from GDB 7.5
 and later about non-assignments with no effect.  See discussion at
 http://sourceware.org/ml/gdb-patches/2012-08/msg00518.html for
 details.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-20  Eli Zaretskii  <eliz@gnu.org>
+
+	* .gdbinit: Use "set $dummy = ..." to avoid warnings from GDB 7.5
+	and later about non-assignments with no effect.  See discussion at
+	http://sourceware.org/ml/gdb-patches/2012-08/msg00518.html for
+	details.
+
 2012-08-20  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Inline setter functions for Lisp_Objects slots of struct specbinding.
