--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-20  Glenn Morris  <rgm@gnu.org>
+
+	* calendar/diary-lib.el (diary-include-files, diary-sexp-entry):
+	* calendar/holidays.el (calendar-holiday-list):
+	Report errors with display-warning rather than beep'n'sleep.
+
 2012-08-20  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp.el (tramp-accept-process-output): Accept only output
