--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,9 @@
 2012-08-21  Glenn Morris  <rgm@gnu.org>
 
+	* calendar/cal-tex.el (cal-tex-cursor-week-at-a-glance):
+	Add autoload cookie.  For now at least, don't use color, since
+	no other cal-tex function does.
+
 	* calendar/cal-tex.el (cal-tex-cursor-week-iso)
 	(cal-tex-cursor-filofax-2week, cal-tex-cursor-filofax-week)
 	(cal-tex-cursor-filofax-daily): Correct start date for diary entries.
