--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,13 @@
 2012-08-21  Glenn Morris  <rgm@gnu.org>
 
+	* calendar/cal-tex.el (cal-tex-filofax-paper): New function.
+	(cal-tex-cursor-filofax-year, cal-tex-cursor-filofax-2week)
+	(cal-tex-cursor-filofax-week, cal-tex-cursor-filofax-daily): Use it.
+	(cal-tex-weekly-paper): New function.
+	(cal-tex-cursor-week, cal-tex-cursor-week2)
+	(cal-tex-cursor-week-iso, cal-tex-cursor-week-monday)
+	(cal-tex-cursor-day): Use it.
+
 	* calendar/cal-tex.el (cal-tex-cursor-week-at-a-glance)
 	(cal-tex-cursor-filofax-week): Remove leading blank page.
 
