--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,14 @@
 2012-08-21  Glenn Morris  <rgm@gnu.org>
 
+	* calendar/cal-tex.el (cal-tex-cursor-filofax-year)
+	(cal-tex-cursor-week, cal-tex-cursor-week2)
+	(cal-tex-cursor-week-iso, cal-tex-cursor-week-at-a-glance)
+	(cal-tex-cursor-filofax-2week, cal-tex-cursor-filofax-week)
+	(cal-tex-cursor-filofax-daily, cal-tex-cursor-day)
+	(cal-tex-insert-preamble, cal-tex-b-document)
+	(cal-tex-e-document, cal-tex-b-center, cal-tex-e-center):
+	Improve cal-tex-cmd usage.
+
 	* calendar/cal-tex.el (cal-tex-filofax-paper): New function.
 	(cal-tex-cursor-filofax-year, cal-tex-cursor-filofax-2week)
 	(cal-tex-cursor-filofax-week, cal-tex-cursor-filofax-daily): Use it.
