--- a/lisp/erc/ChangeLog
+++ b/lisp/erc/ChangeLog
@@ -1,3 +1,9 @@
+2012-08-21  Julien Danjou  <julien@danjou.info>
+
+	* erc-match.el (erc-match-message): Use
+	`erc-match-exclude-server-buffer' not
+	`erc-track-exclude-server-buffer'.
+
 2012-08-20  Josh Feinstein <jlf@foxtail.org>
 
 	* erc.el (erc-display-message): Abstract message hiding decision
