For selected window have (set-)window-point always operate on buffer's point.
* window.c (Fwindow_point): For the selected window always return
the position of its buffer's point.
(Fset_window_point): For the selected window always go in its
buffer to the specified position.
* window.el (window-point-1, set-window-point-1): Remove.
(window-in-direction, record-window-buffer)
(set-window-buffer-start-and-point, split-window-below)
(window--state-get-1, display-buffer-record-window): Replace
calls to window-point-1 and set-window-point-1 by calls to
window-point and set-window-point respectively.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,12 @@
+2012-08-21  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (window-point-1, set-window-point-1): Remove.
+	(window-in-direction, record-window-buffer)
+	(set-window-buffer-start-and-point, split-window-below)
+	(window--state-get-1, display-buffer-record-window): Replace
+	calls to window-point-1 and set-window-point-1 by calls to
+	window-point and set-window-point respectively.
+
 2012-08-21  Glenn Morris  <rgm@gnu.org>
 
 	* calendar/cal-tex.el (cal-tex-leftday, cal-tex-rightday):
