--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-21  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.c (Fwindow_point): For the selected window always return
+	the position of its buffer's point.
+	(Fset_window_point): For the selected window always go in its
+	buffer to the specified position.
+
 2012-08-21  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Setter macros for fontsets.
