--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-08-21  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* dbusbind.c (xd_remove_watch): Do not assume C99 comments.
+
 2012-08-21  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	Avoid direct writes to contents member of struct Lisp_Vector.
