--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,13 @@
+2012-08-21  Eli Zaretskii  <eliz@gnu.org>
+
+	* w32uniscribe.c (uniscribe_shape): Fix producing gstring
+	components for RTL text (Bug#11860).  Adjust X-OFFSET of each
+	non-base glyph for the width of the base character, according to
+	what x_draw_composite_glyph_string_foreground expects.  Generate
+	WADJUST value according to composition_gstring_width's
+	expectations, to produce correct width of the composed character.
+	Reverse the sign of the DU offset produced by ScriptPlace.
+
 2012-08-21  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* dbusbind.c (xd_remove_watch): Do not assume C99 comments.
