--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-21  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* cus-face.el (custom-face-attributes): Fix customize type for the
+	:underline attribute.  (Bug#11805)
+
 2012-08-21  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (window-point-1, set-window-point-1): Remove.
