--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-08-22  Edward O'Connor  <hober0@gmail.com>
+
+	* json.el (json-key-format): Add error properties.
+	(json-encode-key): New function.
+	(json-encode-hash-table, json-encode-alist, json-encode-plist):
+	Use json-encode-key.
+
 2012-08-22  Glenn Morris  <rgm@gnu.org>
 
 	* calendar/cal-tex.el (cal-tex-longday): New function, replacing...
