Make bug-reference-bug-regexp customizable
Ref: http://lists.gnu.org/archive/html/emacs-devel/2012-07/msg00427.html

* lisp/progmodes/bug-reference.el (bug-reference): New custom group.
(bug-reference-bug-regexp): Make it a defcustom.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-22  Glenn Morris  <rgm@gnu.org>
+
+	* progmodes/bug-reference.el (bug-reference): New custom group.
+	(bug-reference-bug-regexp): Make it a defcustom.
+
 2012-08-22  Daiki Ueno  <ueno@unixuser.org>
 
 	* progmodes/js.el (js-indent-level, js-expr-indent-offset)
