Add option to not create bin/emacs link to bin/emacs-VERSION
* Makefile.in (install-arch-dep): If NO_BIN_LINK is non-null,
do not create the bin/emacs link. 

* etc/NEWS: Mention this.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -39,6 +39,11 @@ may be useful.
 as it was confusingly-named and rarely useful.
 
 ---
+** You can use `NO_BIN_LINK=t make install' to prevent the installation
+overwriting "emacs" in the installation bin/ directory with a link
+to emacs-VERSION.
+
+---
 ** Emacs uses libtinfo in preference to libncurses, if available.
 
 ---
