--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-22  Glenn Morris  <rgm@gnu.org>
+
+	* Makefile.in (install-arch-dep): If NO_BIN_LINK is non-null,
+	do not create the bin/emacs link.  (Bug#12011)
+
 2012-08-21  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Merge from gnulib, incorporating:
