--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -2,6 +2,8 @@
 
 	* profiler.el: Switch to cl-lib.
 	(profiler-start): Change mode spec.
+	(with-sample-profiling): New macro.
+	(with-memory-profiling): New macro.
 
 2012-08-22  Daiki Ueno  <ueno@unixuser.org>
 
