* lisp/files.el (safe-local-eval-forms): Fix before-save-hook entry to be buffer-local; add delete-trailing-whitespace.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* files.el (safe-local-eval-forms): Fix before-save-hook entry to be
+	buffer-local; add delete-trailing-whitespace (bug#12259).
+
 2012-08-22  Jeremy Moore  <jmoore@ieee.org>  (tiny change)
 
 	* progmodes/hideif.el (hif-compress-define-list):
