--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-08-25  Eli Zaretskii  <eliz@gnu.org>
+
+	* lib/makefile.w32-in ($(BLD)/execinfo.$(O), execinfo.h): New targets.
+	(GNULIBOBJS): Add $(BLD)/execinfo.$(O).
+
 2012-08-24  Paul Eggert  <eggert@cs.ucla.edu>
 
 	On assertion failure, print backtrace if available.
